--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-chronojump (0.8.9.5) intrepid; urgency=low
+chronojump (0.9.1) lucid; urgency=low
   *Upstream release
 
  -- Andoni Morales Alastruey <ylatuya@gmail.com>  Sat, 15 Aug 2009 17:41:08 +0200
