Updated spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -3641,7 +3641,7 @@ msgstr "Todos los datos subidos serán licenciados como:"
 
 #: ../src/gui/chronojump.cs:1067
 msgid "Creative Commons Attribution 3.0"
-msgstr "Creative Commons Attribución 3.0"
+msgstr "Creative Commons Atribución 3.0"
 
 #. label_link
 #: ../src/gui/chronojump.cs:1072
